refactor: split service responsibilities